# ThreadMesh

./: .gitattributes  .gitignore  CONTRIBUTIONS.md  README.md  REFERENCES.md  REQUIREMENTS.md  THIRD_PARTY_LICENSES.md  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/sessions/: 2026-02-21-requirements.md  2026-02-22-import-display.md  2026-02-22-mesh-measure-git.md
.claude/tasks/: tasks.md
threadmesh/: compute.py  config.py  main.py
threadmesh/conformance/: classifier.py
threadmesh/io/: importer.py
threadmesh/mesh/: generator.py
threadmesh/ui/: measure.py  panel.py  statusbar.py  theme.py  toolbar.py  viewport.py
